DrugiKolokvjum/WhileIskazBreakCont/code-gen/micko.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: %empty
    9          | type _ID

   10 $@3: %empty

   11 body: _LBRACKET variable_list $@3 statement_list _RBRACKET

   12 variable_list: %empty
   13              | variable_list variable

   14 variable: type _ID _SEMICOLON

   15 statement_list: %empty
   16               | statement_list statement

   17 statement: compound_statement
   18          | assignment_statement
   19          | if_statement
   20          | return_statement

   21 compound_statement: _LBRACKET statement_list _RBRACKET

   22 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   23 num_exp: exp
   24        | num_exp _AROP exp

   25 exp: literal
   26    | _ID
   27    | function_call
   28    | _LPAREN num_exp _RPAREN

   29 literal: _INT_NUMBER
   30        | _UINT_NUMBER

   31 $@4: %empty

   32 function_call: _ID $@4 _LPAREN argument _RPAREN

   33 argument: %empty
   34         | num_exp

   35 if_statement: if_part
   36             | if_part _ELSE statement

   37 @5: %empty

   38 $@6: %empty

   39 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN statement

   40 rel_exp: num_exp _RELOP num_exp

   41 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 39
_ELSE (260) 36
_RETURN (261) 41
_ID (262) 6 9 14 22 26 32
_INT_NUMBER (263) 29
_UINT_NUMBER (264) 30
_LPAREN (265) 6 28 32 39
_RPAREN (266) 6 28 32 39
_LBRACKET (267) 11 21
_RBRACKET (268) 11 21
_ASSIGN (269) 22
_SEMICOLON (270) 14 22 41
_AROP (271) 24
_RELOP (272) 40
ONLY_IF (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1, on right: 0
function_list (21)
    on left: 2 3, on right: 1 3
function (22)
    on left: 6, on right: 2 3
$@1 (23)
    on left: 4, on right: 6
$@2 (24)
    on left: 5, on right: 6
type (25)
    on left: 7, on right: 6 9 14
parameter (26)
    on left: 8 9, on right: 6
body (27)
    on left: 11, on right: 6
$@3 (28)
    on left: 10, on right: 11
variable_list (29)
    on left: 12 13, on right: 11 13
variable (30)
    on left: 14, on right: 13
statement_list (31)
    on left: 15 16, on right: 11 16 21
statement (32)
    on left: 17 18 19 20, on right: 16 36 39
compound_statement (33)
    on left: 21, on right: 17
assignment_statement (34)
    on left: 22, on right: 18
num_exp (35)
    on left: 23 24, on right: 22 24 28 34 40 41
exp (36)
    on left: 25 26 27 28, on right: 23 24
literal (37)
    on left: 29 30, on right: 25
function_call (38)
    on left: 32, on right: 27
$@4 (39)
    on left: 31, on right: 32
argument (40)
    on left: 33 34, on right: 32
if_statement (41)
    on left: 35 36, on right: 19
if_part (42)
    on left: 39, on right: 35 36
@5 (43)
    on left: 37, on right: 39
$@6 (44)
    on left: 38, on right: 39
rel_exp (45)
    on left: 40, on right: 39
return_statement (46)
    on left: 41, on right: 20


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


State 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


State 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


State 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 16

   11 body: _LBRACKET . variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 12 (variable_list)

    variable_list  go to state 18


State 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


State 18

   11 body: _LBRACKET variable_list . $@3 statement_list _RBRACKET
   13 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 10 ($@3)

    type      go to state 19
    $@3       go to state 20
    variable  go to state 21


State 19

   14 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 22


State 20

   11 body: _LBRACKET variable_list $@3 . statement_list _RBRACKET

    $default  reduce using rule 15 (statement_list)

    statement_list  go to state 23


State 21

   13 variable_list: variable_list variable .

    $default  reduce using rule 13 (variable_list)


State 22

   14 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 24


State 23

   11 body: _LBRACKET variable_list $@3 statement_list . _RBRACKET
   16 statement_list: statement_list . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 29

    statement             go to state 30
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


State 24

   14 variable: type _ID _SEMICOLON .

    $default  reduce using rule 14 (variable)


State 25

   39 if_part: _IF . _LPAREN @5 rel_exp $@6 _RPAREN statement

    _LPAREN  shift, and go to state 36


State 26

   41 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 41
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 27

   22 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 45


State 28

   21 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 15 (statement_list)

    statement_list  go to state 46


State 29

   11 body: _LBRACKET variable_list $@3 statement_list _RBRACKET .

    $default  reduce using rule 11 (body)


State 30

   16 statement_list: statement_list statement .

    $default  reduce using rule 16 (statement_list)


State 31

   17 statement: compound_statement .

    $default  reduce using rule 17 (statement)


State 32

   18 statement: assignment_statement .

    $default  reduce using rule 18 (statement)


State 33

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


State 34

   35 if_statement: if_part .
   36             | if_part . _ELSE statement

    _ELSE  shift, and go to state 47

    $default  reduce using rule 35 (if_statement)


State 35

   20 statement: return_statement .

    $default  reduce using rule 20 (statement)


State 36

   39 if_part: _IF _LPAREN . @5 rel_exp $@6 _RPAREN statement

    $default  reduce using rule 37 (@5)

    @5  go to state 48


State 37

   26 exp: _ID .
   32 function_call: _ID . $@4 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 31 ($@4)
    $default  reduce using rule 26 (exp)

    $@4  go to state 49


State 38

   29 literal: _INT_NUMBER .

    $default  reduce using rule 29 (literal)


State 39

   30 literal: _UINT_NUMBER .

    $default  reduce using rule 30 (literal)


State 40

   28 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 50
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 41

   24 num_exp: num_exp . _AROP exp
   41 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 51
    _AROP       shift, and go to state 52


State 42

   23 num_exp: exp .

    $default  reduce using rule 23 (num_exp)


State 43

   25 exp: literal .

    $default  reduce using rule 25 (exp)


State 44

   27 exp: function_call .

    $default  reduce using rule 27 (exp)


State 45

   22 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 53
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 46

   16 statement_list: statement_list . statement
   21 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 54

    statement             go to state 30
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


State 47

   36 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28

    statement             go to state 55
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


State 48

   39 if_part: _IF _LPAREN @5 . rel_exp $@6 _RPAREN statement

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 56
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    rel_exp        go to state 57


State 49

   32 function_call: _ID $@4 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 58


State 50

   24 num_exp: num_exp . _AROP exp
   28 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 59
    _AROP    shift, and go to state 52


State 51

   41 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 41 (return_statement)


State 52

   24 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    exp            go to state 60
    literal        go to state 43
    function_call  go to state 44


State 53

   22 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   24 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 61
    _AROP       shift, and go to state 52


State 54

   21 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 21 (compound_statement)


State 55

   36 if_statement: if_part _ELSE statement .

    $default  reduce using rule 36 (if_statement)


State 56

   24 num_exp: num_exp . _AROP exp
   40 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 52
    _RELOP  shift, and go to state 62


State 57

   39 if_part: _IF _LPAREN @5 rel_exp . $@6 _RPAREN statement

    $default  reduce using rule 38 ($@6)

    $@6  go to state 63


State 58

   32 function_call: _ID $@4 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    $default  reduce using rule 33 (argument)

    num_exp        go to state 64
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    argument       go to state 65


State 59

   28 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 28 (exp)


State 60

   24 num_exp: num_exp _AROP exp .

    $default  reduce using rule 24 (num_exp)


State 61

   22 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 22 (assignment_statement)


State 62

   40 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 66
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 63

   39 if_part: _IF _LPAREN @5 rel_exp $@6 . _RPAREN statement

    _RPAREN  shift, and go to state 67


State 64

   24 num_exp: num_exp . _AROP exp
   34 argument: num_exp .

    _AROP  shift, and go to state 52

    $default  reduce using rule 34 (argument)


State 65

   32 function_call: _ID $@4 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 68


State 66

   24 num_exp: num_exp . _AROP exp
   40 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 52

    $default  reduce using rule 40 (rel_exp)


State 67

   39 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28

    statement             go to state 69
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


State 68

   32 function_call: _ID $@4 _LPAREN argument _RPAREN .

    $default  reduce using rule 32 (function_call)


State 69

   39 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN statement .

    $default  reduce using rule 39 (if_part)
